--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,6 @@ version_scheme = "semver2"
 version_provider = "uv"
 update_changelog_on_bump = true
 major_version_zero = true
+version_files = [
+    "app/__version__.py"
+]
