--- a/app/log_config.json
+++ b/app/log_config.json
@@ -14,8 +14,7 @@
         "logger": "name",
         "module": "module",
         "function": "funcName",
-        "line": "lineno",
-        "thread_name": "threadName"
+        "line": "lineno"
       }
     }
   },
