--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi==0.115.12",
+    "fastapi[standard]==0.115.12",
     "imported==0.1.1",
     "pydantic-settings>=2.9.1",
     "uvicorn==0.34.2",
